Add time filtering to deals endpoint
Implemented getActiveDeals() with TimeParser utility for flexible
time format parsing.Handles midnight wraparound.
Tested with 3:00pm, 6:00pm, 9:00pm - all working correctly